add back in bio

--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -1,6 +1,6 @@
 - id: Dan
   avatar: avatars/dan.jpg
-  bio: 
+  bio: Sailign round the world, tryinmg to keep track of where I am
   facebook: dan.bodey.3
   website: https://hungry-khorana-f185e5.netlify.com/
   location: On a boat
