Add back in image

--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -1,6 +1,6 @@
 - id: Dan
   avatar: avatars/dan.jpg
-  bio: Sailign round the world, tryinmg to keep track of where I am
+  bio: Sailing round the world, trying to keep track of where I am
   facebook: dan.bodey.3
   website: https://danbodey.netlify.com/
   location: On a boat
