--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -1,3 +1,3 @@
-- id: speeches
-  description: Some of the greatest words ever spoken.
+- id: training
+  description: I unbderwent 4 weeks of training to help prepare me for the race.
   image: img/speeches-cover.jpg
