need to find twitter

--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -2,6 +2,6 @@
   avatar: avatars/dan.jpg
   bio: Sailing round the world, trying to keep track of where I am
   facebook: dan.bodey.3
-  twitter: 
+  twitter: twitter.com
   website: https://danbodey.netlify.com/
   location: On a boat
