--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -5,4 +5,4 @@
   twitter: twitter.com
   website: https://danbodey.netlify.com/
   location: On a boat
-  profile_image: avatar/dan.jpg
+  profile_image: avatars/dan.jpg
