Change some images and add an draft page

--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -1,5 +1,5 @@
 - id: Dan
-  avatar: avatars/dan.jpg
+  avatar: avatars/danmugshot.jpg
   bio: Sailing round the world, trying to keep track of where I am
   facebook: dan.bodey.3
   twitter: twitter.com
