--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -1,3 +1,3 @@
 - id: training
-  description: I underwent 4 weeks of training to help prepare me for the race.
+  description: To get everyone prepared for the race participants are required to undergo four levels of training, each level takes a week to complete and can be repeated if required.
   image: img/speeches-cover.jpg
