--- a/src/content/tag.yaml
+++ b/src/content/tag.yaml
@@ -1,3 +1,3 @@
 - id: training
   description: To get everyone prepared for the race participants are required to undergo four levels of training, each level takes a week to complete and can be repeated if required.
-  image: img/L1/IMG-20180921-WA0011.jpg
+  image: img/L2/L2-20190228-33.jpg
